<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/margin_standard_16dp"
        android:paddingBottom="@dimen/margin_standard_16dp"
        android:paddingRight="@dimen/margin_standard_16dp"
        android:paddingTop="@dimen/margin_standard_56dp"
        android:fadingEdge="none"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:gravity="bottom"
                    android:hint="@string/account_setup_basics_email_hint"
                    android:layout_toLeftOf="@+id/account_domain"
                    android:lines="1"
                    style="@style/Body1Style" />

                <TextView
                    android:id="@+id/account_domain"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    style="@style/Body1Style" />
            </RelativeLayout>

            <EditText
                android:id="@+id/account_password"
                android:inputType="textPassword"
                android:hint="@string/account_setup_basics_password_hint"
                android:lines="1"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:nextFocusDown="@+id/next"
                style="@style/Body1Style" />

            <CheckBox
                android:id="@+id/show_password"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/account_setup_basics_show_password"
                style="@style/CaptionStyle" />

            <com.tiscali.appmail.view.ClientCertificateSpinner
                android:id="@+id/account_client_certificate_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.tiscali.appmail.view.FoldableLinearLayout
                android:id="@+id/foldable_advanced_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                custom:foldedLabel="@string/client_certificate_advanced_options"
                custom:unFoldedLabel="@string/client_certificate_advanced_options"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/account_client_certificate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_basics_client_certificate" />
            </com.tiscali.appmail.view.FoldableLinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/wizard_setup" />

</LinearLayout>