<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_standard_16dp">

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/borderlessButtonStyle"
            android:theme="@style/FlatButtonStyle"
            android:layout_alignParentRight="true"
            android:text="@string/done_action" />

    </RelativeLayout>

</merge>