<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_container"
    android:paddingLeft="@dimen/margin_standard_16dp"
    android:paddingRight="@dimen/margin_standard_16dp"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_standard_48dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/account_icon"
        android:alpha="0.54"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/account_name"
        style="@style/RobotoMedium14"
        android:textColor="@drawable/nav_drawer_list_item_text_color"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_standard_56dp"
        android:gravity="center_vertical"
        android:ellipsize="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>