<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_mail"
        android:title="@string/tab_mail"
        android:icon="@drawable/ic_mail_white" />

    <item
        android:id="@+id/menu_news"
        android:title="@string/tab_news"
...
