...
        android:title="@string/next_action"
        android:icon="?attr/iconActionNextMessage"
        app:showAsAction="always" />

    <!-- MessageList -->
    <item
        android:id="@+id/search"
        android:icon="?attr/iconActionSearch"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search_action" />

    <!-- MessageList -->
...
